--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title> Organizacja Eventów</title>
 </head>
 <body>
-<h2>Informacje o wydarzeniach i sprzedaż biletów</h2>
+<h2>Informacje o wydarzeniach i sprzedaz biletow</h2>
 <ul>
     <li><a href="tickets">Bilety</a></li>
     <li><a href="events">Imprezy</a></li>
