--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 <h2>Informacje o wydarzeniach i sprzedaz biletow</h2>
+
+<ul class="nav nav-tabs" role="tablist">
+
 <ul>
     <li><a href="tickets">Bilety</a></li>
     <li><a href="events">Imprezy</a></li>
